# pandora-scheduler

./: .gitignore  EXAMPLE_FULL_PIPELINE.md  QUICK_START.md  README.md  debug_k2_321.py  debug_k2_321_detailed.py  debug_legacy_k2_321.py  example_scheduler_config.json  launch.json  long_run_profile.prof  pyproject.toml  run_scheduler.py  visualize_xml.py
comparison_outputs/: science_calendar.diff
docs/: ASSESSMENT_OF_DIFFERENCES.md  CODEBASE_ANALYSIS.md  EXAMPLE_SCHEDULER_CONFIG.md  MODERNIZATION_SUMMARY.md  PARITY_PLAN.md  TARGET_DEFINITION_INTEGRATION.md  VISIBILITY_REGENERATION.md  visibility-plan.md
scripts/: add_transit_overlap.py  analyse_occultation_window.py  check_data_fingerprints.py  compare_outputs.py  compare_xml_files.py  comprehensive_xml_analysis.py  debug_occultation.py  debug_science_calendar.py  debug_transit_candidates.py  debug_visibility_compare.py  detailed_xml_diff.py  generate_target_manifests.py  inspect_mismatches.py  memory_profile_visibility.py  models.py  parser.py  regenerate_all_targets.py  regenerate_legacy_visibility.py  regenerate_science_calendar.py  regenerate_xml.py  run_schedule_comparison.py  test_unified_config.py  validate_visibility_data.py  verify_aux_list_generation.py  vis_calc.py  visualizer.py
tests/: test_aux_requested_hours_fallback.py  test_config.py  test_config_behavior.py  test_config_propagation.py  test_helper_codes.py  test_io.py  test_io_mtime_cache.py  test_occultation_deprioritization.py  test_per_target_visit_duration.py  test_pipeline_v2.py  test_pipeline_visibility.py  test_scheduler_errors.py  (+10 more)
(+60 files in other folders)
