[tool.poetry]
name = "pandora-scheduler"
version = "0.1.0"
description = "Pandora mission scheduling pipeline and rework sandbox"
authors = ["Pandora Scheduler Developers <pandora-dev@example.com>"]
packages = [
  { include = "pandorascheduler", from = "src" },
  { include = "pandorascheduler_rework", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.0"
astropy = "^6.0.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"
pytest = "^8.2.0"
ruff = "^0.14.7"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:ERFA function 'pmsafe' yielded 1 of 'distance overridden (Note 6)':erfa.ErfaWarning"
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = "src/pandorascheduler_rework/.*\\.py"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.flake8.per-file-ignores]
"src/pandorascheduler_rework/__init__.py" = "F401"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
